# ASTRA-Core

./: .gitignore  AUTHORS.md  LICENSE  README.md  pyproject.toml  requirements.txt  train_astra_core.py  train_tenslora_xs.py
.github/workflows/: ci.yml
archive/: legacy_monolith_backup.py
astra_core/: __init__.py  __main__.py  artifacts.py  cli.py  constants.py  experiment.py  modeling.py  sweep.py  training_state.py
docs/: CODE_MAP_zh.md
examples/: run_sst2.sh  sweep_sst2.json
scripts/: prepare_glue_dataset.py
tenslora_xs/: __init__.py  __main__.py  artifacts.py  cli.py  constants.py  experiment.py  modeling.py  tasks.py
tests/: test_public_helpers.py
