[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TensLoRA-XS"
version = "0.1.0"
description = "Research code for TensLoRA-XS style family-wise Tucker adapters with additive and multiplicative Tucker-core updates on GLUE tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "torch>=2.1",
  "transformers>=4.40",
  "datasets>=2.18",
  "accelerate>=0.27",
  "tensorly>=0.8",
  "numpy>=1.24",
  "matplotlib>=3.7",
]
keywords = ["lora", "tucker", "adapter", "transformers", "glue", "research"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
tenslora-xs = "tenslora_xs.cli:main"

[tool.setuptools]
packages = ["tenslora_xs"]
