[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ASTRA-Core"
version = "0.1.0"
description = "Reference SFT code for ASTRA-Core and its mode/hybrid variants on local GLUE classification tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "张清泉" },
  { name = "江宇睿" },
]
dependencies = [
  "torch>=2.1",
  "transformers>=4.40",
  "datasets>=2.18",
  "accelerate>=0.27",
  "tensorly>=0.8",
  "numpy>=1.24",
  "matplotlib>=3.7",
]
keywords = ["astra", "tucker", "peft", "transformers", "glue", "research"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
astra-core = "astra_core.cli:main"

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["astra_core"]
